# cpptetris

./: CMakeLists.txt  CMakeSettings.json
src/: CMakeLists.txt  gamemain.cpp  gamemain.h  helpers.h  linuxmain.cpp  main.cpp  mygl.cpp  mygl.h  myglfuncs.h  window.h  winmain.cpp
